--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
 
     //bottom bar
     implementation 'com.etebarian:meow-bottom-navigation:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
 }
