--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 26 15:36:07 ICT 2021
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#Wed Sep 29 20:55:29 ICT 2021
+sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
