--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 02 00:20:35 ICT 2021
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#Sat Oct 02 13:32:33 ICT 2021
+sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
