--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Apossbuyer">
         <activity
+            android:name=".uicontroler.activity.DetailProductActivity"
+            android:exported="true" />
+        <activity
             android:name=".uicontroler.activity.MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"/>
+            />
         <activity
             android:name=".uicontroler.activity.SplashActivity"
             android:exported="true">
