--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 03 17:17:19 ICT 2021
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#Mon Oct 04 20:57:35 ICT 2021
+sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
