--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         android:theme="@style/Theme.Apossbuyer">
         <activity
             android:name=".uicontroler.activity.UserDetailActivity"
-            android:exported="true" />
-        <activity
-            android:name=".uicontroler.activity.DetailProductActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".uicontroler.activity.DetailProductActivity"
+            android:exported="true" >
+
         </activity>
         <activity
             android:name=".uicontroler.activity.MainActivity"
