--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Apossbuyer">
         <activity
+            android:name=".uicontroler.activity.SearchActivity"
+            android:exported="true" />
+        <activity
             android:name=".uicontroler.activity.CategoryActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".uicontroler.activity.DetailProductActivity"
             android:exported="true" />
