--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id "androidx.navigation.safeargs.kotlin"
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -100,8 +101,6 @@ dependencies {
     // Annotation processor
     implementation("androidx.lifecycle:lifecycle-common-java8:2.3.1")
     implementation("androidx.fragment:fragment-ktx:1.3.6")
-
-
 
 
 }
