--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     // Annotation processor
     implementation("androidx.lifecycle:lifecycle-common-java8:2.3.1")
     implementation("androidx.fragment:fragment-ktx:1.3.6")
+    //gif
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
 
 }
