--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 05 20:49:56 ICT 2021
-sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
+#Thu Oct 14 14:12:21 ICT 2021
+sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
