--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.aposs_buyer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".ApossBuyerApplication"
@@ -13,9 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Apossbuyer">
         <activity
+            android:name=".uicontroler.activity.RatingActivity"
+            android:exported="true" />
+        <activity
             android:name=".uicontroler.activity.AddressActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".uicontroler.activity.SearchActivity"
             android:exported="true" />
@@ -24,7 +28,7 @@
             android:exported="true" />
         <activity
             android:name=".uicontroler.activity.DetailProductActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".uicontroler.activity.MainActivity"
             android:exported="true" />
