--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         version_retrofit = "2.9.0"
         version_retrofit_coroutines_adapter = "0.9.2"
         version_recyclerview = "1.3.0-alpha01"
+        roomVersion = "2.3.0"
     }
     repositories {
         google()
