--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 03 11:47:48 ICT 2021
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+#Sat Nov 06 20:54:04 ICT 2021
+sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
