--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 23 22:34:35 ICT 2021
-sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
+#Sun Dec 26 14:35:31 ICT 2021
+sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
