done login with google

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
