--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Dec 26 14:35:31 ICT 2021
-sdk.dir=C\:\\Users\\Lenovo\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
