prepare for KLTN

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 12 15:00:39 ICT 2022
-sdk.dir=/Users/lap14812/Library/Android/sdk
+#Sat Oct 15 13:54:35 ICT 2022
+sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
