--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 16 16:31:00 ICT 2022
-sdk.dir=C\:\\Users\\TCS\\AppData\\Local\\Android\\Sdk
+#Sat Nov 05 22:01:54 ICT 2022
+sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
